@@ -92,15 +92,19 @@
 
 <!--      <p>There is currently no separate development release.</p>-->
       <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.23/deskbar-applet-2.23.5.tar.gz"
-      title="Source code of the latest stable release">
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.23/deskbar-applet-2.23.6.tar.gz"
+      title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Deskbar-Applet 2.23.5</a></div>
+      Deskbar-Applet 2.23.6</a></div>
       
     <h3>Past releases</h3>
       <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.23/deskbar-applet-2.23.4.tar.gz"
-      title="Source code of the latest stable release">
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.23/deskbar-applet-2.23.5.tar.gz">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Deskbar-Applet 2.23.5</a></div>
+
+      <div class="download">
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.23/deskbar-applet-2.23.4.tar.gz">
       <img src="./images/package-x-generic.png" alt="source package" />
       Deskbar-Applet 2.23.4</a></div>
     </div>
