@@ -86,7 +86,31 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
-		
+		<h3>August 5, 2008</h3>
+		  <b>Unstable</b> version 2.23.6 released.<br />
+			This release includes a new Google module
+			that will display search results from Google
+			as you type. In addition, you can now configure
+			the entry width in preferences when the
+			stick-to-panel UI is used.
+		  <br /><br />
+		  Changes since 2.23.5:
+		  <ul>
+		  	<li>When retrieving tomboy version wait until the process exited to avoid zombie process.</li>
+			<li>Added get_locale_lang function to Utils.py.</li>
+			<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=544587">bug #544587</a>: unknown locale</li>
+			<li>GconfStore.py: Added sanity checks when setting values and emitting signals
+			(fixes <a href="http://bugzilla.gnome.org/show_bug.cgi?id=486549">bug #486549</a>)</li>
+			<li>Added Google search module. Written by Helton Doria. Requires simplejson Python module.
+			Fixes <a href="http://bugzilla.gnome.org/show_bug.cgi?id=535360">bug #535360</a></li>
+			<li>desklicious.py: Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=545791">bug #545791</a>: local variable 'dom' referenced before assignment</li>
+			<li>Removed built-in gnomedesktop module an use gnome-python-desktop's instead</li>
+			<li>Added option to change entry width when Button UI is used</li>
+			<li>desklicious.py: Adjusted url to RSS feeds. Check if content is formatted properly before parsing it.
+			Fixes <a href="http://bugzilla.gnome.org/show_bug.cgi?id=544645">bug #544645</a></li>
+		  </ul>
+		  <a href="download.html">Download it</a>
+
 		<h3>August 3, 2008</h3>
 		  <b>Stable</b> version 2.22.3.1 released.<br />
 		  This release fixes a bug that appeared because of the new version of delicious.com.
